Fixed text not centered

--- a/src/styles/node-styles.scss
+++ b/src/styles/node-styles.scss
@@ -38,6 +38,7 @@
         min-height: 0 !important;
 
         text-align: center;
+        vertical-align: middle;
       }
     }
   }
